# fine-poems

./: .gitattributes  .gitignore  README.md  citations.tex  notes.md  pyproject.toml  report.tex  report_draft.tex
.github/: copilot-instructions.md
data/: poem_condense.csv  poem_finetune_13000.jsonl  poetic_refusal.jsonl
inference/: judge_arena_base.csv  judge_arena_dora-1k.csv  judge_arena_dora-optimised-1k.csv  judge_arena_dora-optimised-64-128-1k.csv  judge_arena_dora-optimised-64-128.csv  judge_arena_dora-optimised-full.csv  judge_arena_lora-16-32-1k.csv  judge_arena_lora-base-1k.csv  judge_arena_lora-base-full.csv  judge_arena_lora-decay.csv  judge_arena_lora-dropout-1k.csv  judge_arena_lora-dropout-full.csv  judge_arena_lora-learner.csv
notebooks/: 00_Structure_Analyzer.ipynb  011_Data_Generator_2.ipynb  01_Data_Generator.ipynb  01_Data_Refiner.ipynb  02_Trainer.ipynb  02_Trainer_Arena.ipynb  02_Trainer_Reward.ipynb  02_Training_Monitor.ipynb  03_Judge_Arena.ipynb  04_Inference_Batch.ipynb  04_evaluation.ipynb
results/: eval_judge_arena_base_results.csv  eval_judge_arena_dora-1k_results.csv  eval_judge_arena_dora-optimised-1k_results.csv  eval_judge_arena_dora-optimised-64-128-1k_results.csv  eval_judge_arena_dora-optimised-64-128_results.csv  eval_judge_arena_dora-optimised-full_results.csv  eval_judge_arena_lora-16-32-1k_results.csv  eval_judge_arena_lora-base-1k_results.csv  eval_judge_arena_lora-base-full_results.csv  eval_judge_arena_lora-decay_results.csv  eval_judge_arena_lora-dropout-1k_results.csv  eval_judge_arena_lora-dropout-full_results.csv  eval_judge_arena_lora-learner_results.csv  eval_summary.csv  eval_summary.json
(+42 files in other folders)
