[project]
name = "The-Bard"
version = "0.1.0"
description = "A finetuned llm that responds in poems, proses and rhymes."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"accelerate>=0.29.0",
	"anthropic>=0.26.0",
	"datasets>=2.18.0",
	"ipykernel>=6.29.0",
	"ipywidgets>=8.1.2",
	"openai>=1.30.0",
	"pandas>=2.2.1",
	"peft>=0.10.0",
	"torch>=2.3.0",
	"transformers>=4.39.3",
	"trl>=0.8.6",
	"unsloth[colab-new] @ git+https://github.com/unslothai/unsloth.git",
	"wandb>=0.16.4",
]

[tool.uv]
dev-dependencies = [
	"python-dotenv>=1.0.1",
]
