[project]
name = "The-Bard"
version = "0.1.0"
description = "A finetuned llm that responds in poems, proses and rhymes."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"accelerate>=0.29.0",
	"anthropic>=0.26.0",
	"datasets>=2.18.0",
	"ipykernel>=6.29.0",
	"ipywidgets>=8.1.2",
	"json-repair>=0.58.0",
	"jsonschema>=4.26.0",
	"matplotlib>=3.10.8",
	"numpy>=2.4.1",
	"openai>=1.30.0",
	"pandas>=2.2.1",
	"peft>=0.10.0",
	"polars>=1.37.1",
	"scipy>=1.17.1",
	"seaborn>=0.13.2",
	"torch>=2.10.0",
	"transformers>=4.39.3",
	"trl>=0.24.0",
	"unsloth>=2026.2.1",
	"wandb>=0.16.4",
]

[tool.uv]
dev-dependencies = [
	"python-dotenv>=1.0.1",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
